--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -8,12 +8,30 @@ form, .main-body > div{
 	height: 100px;
 	width: auto;
 }
-.priceBtn{
+/*.priceBtn{
+
 	display: inline-block;
-	vertical-align: center;
-}
+	vertical-align: middle;
+
+}*/
 #itemPanel li{
 	list-style: none;
 	background-color: lightgrey;
 	padding: 20px 10px;
+}
+/*.itemBox{
+	padding: 15px 15px;
+}
+*/
+
+#item-header{
+	background-color: grey;
+	padding: 30px 20px;
+}
+.list-item{
+	background-color: rgba(211, 211, 211, 0.27);
+	border-bottom: 1px solid black;
+}
+.list-item td{
+	padding: 15px 30px 15px 30px;
 }
