some changies again

--- a/public/Routingtest/templates/products.html
+++ b/public/Routingtest/templates/products.html
@@ -1,7 +1,9 @@
-<ul>
-	<li>HTC</li>
-	<li>Apple</li>
-	<li>Samsung</li>
-	<li>One+1</li>
-	<li>Google</li>
-</ul>
+<div>
+	<ul>
+		<li>HTC</li>
+		<li>Apple</li>
+		<li>Samsung</li>
+		<li>One+1</li>
+		<li>Google</li>
+	</ul>
+</div>
